<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/frameLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_app">

        <LinearLayout
            android:id="@+id/SettingsLayoutcomponents"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/DarkGray"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:backgroundTint="@color/DarkGray"
                android:gravity="center"
                android:text="@string/Settings"

                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                android:textColor="@color/White"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@color/whiteGray" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/Gray"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/User"
                    android:textColor="@color/White"
                    android:textSize="20sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:background="@color/whiteGray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/Playback"
                    android:textColor="@color/White"
                    android:textSize="20sp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/SettingsLayoutComponentsDetail"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@id/SettingsLayoutcomponents"
            android:background="@color/Black"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/DarkGray"
                    android:gravity="center"
                    android:text="@string/Reset_user_data"
                    android:textColor="@color/White"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/Reset_user_data_detail"
                    android:textColor="@color/whiteGray" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@color/whiteGray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/DarkGray"
                    android:gravity="center"
                    android:text="@string/Feedback"
                    android:textColor="@color/White"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/Feedback_details"
                    android:textColor="@color/whiteGray" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_gravity="center"
                    android:background="@color/whiteGray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/DarkGray"
                    android:gravity="center"
                    android:text="@string/Parent_password"
                    android:textColor="@color/White"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/parent_password_detail"
                    android:textColor="@color/whiteGray" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@color/whiteGray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/DarkGray"
                    android:gravity="center"
                    android:text="@string/Exit"
                    android:textColor="@color/White"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/Exit_detail"
                    android:textColor="@color/whiteGray" />

            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>
</FrameLayout>


