<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="40dp"
    android:layout_marginTop="30dp"
    >
    <LinearLayout
        android:id="@+id/MenuVeideoLayout"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:background="@color/DarkGray"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/DarkGray"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/Menu"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/White"
            android:textSize="16dp"
           />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/SeriesListView"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_toRightOf="@id/MenuVeideoLayout"
        android:background="@color/DarkGray"
        android:orientation="vertical">
        <TextView
            android:id="@+id/videotxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Video"
            android:textSize="16dp"
            android:textColor="@color/White"
            android:layout_marginStart="10dp"
            />
        <ImageView
            android:id="@+id/imgExit"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/exit"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            />
        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Gray"
            android:layout_alignBottom="@id/imgExit"
            android:layout_marginTop="5dp"
            />
        <RelativeLayout
            android:id="@+id/serieslayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/series1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SeriesName1"
                android:textColor="@color/White"
                android:background="@color/Gray"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Action"
                android:textColor="@color/White"
                android:layout_marginTop="50dp"
                />
        </RelativeLayout>


    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/SeriesDescription"
        android:layout_width="230dp"
        android:layout_height="match_parent"
        android:layout_toRightOf="@id/SeriesListView"
        android:background="@color/DarkGray"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">
        <TextView
            android:id="@+id/InfoDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/INFO"
            android:textSize="16dp"
            android:textColor="@color/White"
            android:layout_marginStart="10dp"
            />
        <View
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Green"
            android:layout_alignBottom="@id/InfoDescription"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/seriesImg"
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/dirilis" />

            <ImageView
                android:id="@+id/playSeries"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/play_button" />

            <ImageView
                android:id="@+id/InfoOfSeries"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/information_button" />

            <ImageView
                android:id="@+id/ImdbImage"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="130dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/imdb_button" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/ImdbImage"
                android:textColor="@color/White"
                android:layout_marginEnd="25dp"/>
            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/Orange"
                android:text="@string/year"
                android:layout_below="@id/seriesImg"/>
            <TextView
                android:id="@+id/yearValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/whiteGray"
                android:text="@string/_2018"
                android:layout_toRightOf="@+id/year"
                android:layout_below="@+id/seriesImg"
                />
            <TextView
                android:id="@+id/genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/Orange"
                android:text="@string/genre"
                android:layout_below="@id/year"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/genre_detail"
                android:textColor="@color/whiteGray"
                android:layout_toRightOf="@+id/genre"
                android:layout_below="@+id/yearValue"/>


        </RelativeLayout>


    </RelativeLayout >
</RelativeLayout>